remove java.util.Base64